- Fix đa ngôn ngữ trong hệ thống - Fix bug mất ô số với loại ký pki, bcy, remote signing - Fix cho phép gia hạn ký đối với HĐ của tổ chức ( đang xử lý, sắp hết hạn, quá hạn)

--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -23,7 +23,7 @@
                                         <span class="required-title">*</span>
                                     </div>
                                     <div class="input-line">
-                                        <input type="text" placeholder="{{ 'Nhập tên tổ chức' | translate }}" formControlName="name" class="input-text" />
+                                        <input type="text" placeholder="{{ 'enter.name.org' | translate }}" formControlName="name" class="input-text" />
                                     </div>
                                     <div *ngIf="submitted && f.name.errors" class="invalid">
                                         <div *ngIf="f.name.errors.required">
@@ -60,7 +60,7 @@
                                         <span class="required-title">*</span>
                                     </div>
                                     <div class="input-line">
-                                        <input type="text" placeholder="{{ 'Nhập mã tổ chức' | translate }}" formControlName="code" class="input-text" />
+                                        <input type="text" placeholder="{{ 'enter.code.org' | translate }}" formControlName="code" class="input-text" />
                                     </div>
                                     <div *ngIf="submitted && f.code.errors" class="invalid">
                                         <div *ngIf="f.code.errors.pattern">
