--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -39,19 +39,19 @@
 
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu_language">
             <button ngbDropdownItem class="drop_language" (click)="switchLang('vi')">
-              <div style="display: flex; align-items: center">
+              <div style="display: block">
                 <!-- <div class="db_user">
                   <div class="db_icon_vietnam"></div>
                 </div> -->
-                <div>VI</div>
+                VI
               </div>
             </button>
             <button ngbDropdownItem class="drop_language" (click)="switchLang('en')">
-              <div style="display: flex; align-items: center">
+              <div style="display: block">
                 <!-- <div class="db_user">
                   <div class="db_icon_english"></div>
                 </div> -->
-                <div>EN</div>
+                EN
               </div>
             </button>
           </div>
