--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -30,7 +30,7 @@
       <div class="row list_header" *ngIf="this.foldersData?.length > 0">
         <div class="col-md-4 bg-header"></div>
         <div class="col-md-3 bg-header">{{'create-date' | translate}}</div>
-        <div class="col-md-3 bg-header">Cập nhật lần cuối</div>
+        <div class="col-md-3 bg-header">{{'update.last' | translate}}</div>
         <div class="col-md-1 bg-header">{{'action' | translate}}</div>
         <div class="col-md-1 bg-header">
           <input style="margin-left: 4px;" id="allDownload" name="allDownload" type="checkbox" [(ngModel)]="checkedAll" (click)="toggleDownload(checkedAll)" />
@@ -89,7 +89,7 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; pageChange()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
       </div>
       <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
@@ -133,7 +133,7 @@
       <div class="row list_header" *ngIf="this.foldersData.length > 0;">
         <div class="col-md-4 bg-header"></div>
         <div class="col-md-3 bg-header">{{'create-date' | translate}}</div>
-        <div class="col-md-3 bg-header">Cập nhật lần cuối</div>
+        <div class="col-md-3 bg-header">{{'update.last' | translate}}</div>
         <div class="col-md-1 bg-header">{{'action' | translate}}</div>
         <div class="col-md-1 bg-header">
           <input style="margin-left: 4px;" id="allDownload" name="allDownload" type="checkbox" [(ngModel)]="checkedAll" (click)="toggleDownload(checkedAll)" />
@@ -269,7 +269,7 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; pageChange()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
       </div>
       <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
