--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -32,7 +32,7 @@
           </button>
         </div>
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left" *ngIf="this.isOrg == 'off'">
-          <button (click)="cancelMany()" class="btn-block btn_cancel">{{'cancel.multi'| translate}}</button>
+          <button (click)="cancelMany()" class="btn-block btn_cancel">{{"cancel.multi"| translate}}</button>
         </div>
       </div>
 
@@ -162,7 +162,7 @@
                       <mat-icon><img src="../../assets/img/programming-arrow.svg" class="img_icon"/></mat-icon>
                       <span class="three_dot_text">{{'view.processing.flow' | translate}}</span>
                     </button>
-                    <button mat-menu-item class="div_icon" (click)="openEditExpiration(item)" *ngIf="this.isOrg == 'off' && (status == 'processing' || status == 'expire' || status == 'overdue')">
+                    <button mat-menu-item class="div_icon" (click)="openEditExpiration(item)" *ngIf="(status == 'processing' || status == 'expire' || status == 'overdue')">
                       <mat-icon><img src="../../assets/img/timer-start.svg" class="img_icon"/></mat-icon>
                       <span class="three_dot_text">{{'edit.sign.time' | translate}}</span>
                     </button>
@@ -221,7 +221,7 @@
   </div>
     <div class="contract_footer">
       <div class="footer_contract_per_page">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>{{this.page}}</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -234,16 +234,16 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
     </div>
       <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
-      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_responsive">
       <div class="contract_footer_per_page_responsive">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
             <option value="" hidden>10</option>
             <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -254,17 +254,17 @@
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
     </div>
-      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
     </div>
   </div>
   <div class="contract_footer_pagination_responsive">
     <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
     <div class="enterPage" *ngIf="pageTotal > 0">
         <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-        <p>của {{countPage()}} trang</p>
+        <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
     </div>
   </div>
     <div>{{roleMess | translate}}</div>
@@ -468,7 +468,7 @@
                         <mat-icon><img src="../../assets/img/document-text.svg" class="img_icon"/></mat-icon>
                         <span class="three_dot_text">{{'contract.connect.view' | translate}}</span>
                       </button>
-                      <button mat-menu-item class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'overdue') && this.isOrg == 'off'" (click)="openEditExpiration(item)">
+                      <button mat-menu-item class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'overdue')" (click)="openEditExpiration(item)">
                         <mat-icon><img src="../../assets/img/timer-start.svg" class="img_icon"/></mat-icon>
                         <span class="three_dot_text">{{'edit.sign.time' | translate}}</span>
                       </button>
@@ -533,7 +533,7 @@
     </div>
     <div class="contract_footer">
       <div class="footer_contract_per_page">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -545,16 +545,16 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
       </div>
       <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
-        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+        <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_responsive">
         <div class="contract_footer_per_page_responsive">
-            <div>Số lượng hiển thị&nbsp;</div>
+            <div>{{'num.display' | translate}}&nbsp;</div>
             <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -565,23 +565,23 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
       </div>
-        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+        <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_pagination_responsive">
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
     </div>
     <div>{{roleMess | translate}}</div>
 </div>
 
-<!-- Màn HĐ hoàn thành HĐ của tổ chức-->
+<!-- Màn HĐ hoàn thành HĐ tổ chức-->
 <div *ngIf="!((this.filter_status == 20 ||
               this.filter_status == 33 ||
               this.filter_status == 30 ||
@@ -757,7 +757,7 @@
     </div>
     <div class="contract_footer">
       <div class="footer_contract_per_page">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -769,11 +769,11 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
     </div>
       <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
-      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div>{{roleMess | translate}}</div>
@@ -997,7 +997,7 @@
     </div>
     <div class="contract_footer">
       <div class="footer_contract_per_page">
-        <div>Số lượng hiển thị&nbsp;</div>
+        <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -1009,15 +1009,15 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
         <div class="enterPage" *ngIf="pageTotal > 0">
             <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-            <p>của {{countPage()}} trang</p>
+            <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
         </div>
     </div>
-      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_responsive">
       <div class="contract_footer_per_page_responsive">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
             <option value="" hidden>10</option>
             <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -1028,17 +1028,17 @@
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
       </div>
-        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+        <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_pagination_responsive">
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
     </div>
     <div>{{roleMess | translate}}</div>
@@ -1242,7 +1242,7 @@
       </div>
       <div class="contract_footer">
         <div class="footer_contract_per_page">
-          <div>Hiển thị&nbsp;</div>
+          <div>{{'display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
               <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -1254,16 +1254,16 @@
             <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; downloadMany()" previousLabel="" nextLabel=""></pagination-controls>
             <div class="enterPage" *ngIf="pageTotal > 0">
               <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-              <p>của {{countPage()}} trang</p>
+              <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
           </div>
         </div>
-        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+        <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
         </div>
     </div>
 
     <div class="contract_footer_responsive">
       <div class="contract_footer_per_page_responsive">
-          <div>Số lượng hiển thị&nbsp;</div>
+          <div>{{'num.display' | translate}}&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
             <option value="" hidden>10</option>
             <option *ngFor="let d of this.pageOptions">{{d}}</option>
@@ -1274,17 +1274,17 @@
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
       </div>
-        <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+        <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
     <div class="contract_footer_pagination_responsive">
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
-          <p>của {{countPage()}} trang</p>
+          <p>{{'of' | translate}} {{countPage()}} {{'page' | translate}}</p>
       </div>
     </div>
 </div>
@@ -1480,7 +1480,7 @@
           <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; release()" previousLabel="" nextLabel=""></pagination-controls>
       </div>
       <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
-      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+      <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
       </div>
     </div>
 </div>
@@ -1669,7 +1669,7 @@
         <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; multiDeleteDraft('changePages')" previousLabel="" nextLabel=""></pagination-controls>
     </div>
     <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} -->
-    <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+    <div class="footer_page_number">{{'display' | translate}} <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> {{'results' | translate}}
     </div>
   </div>
 </div>
