--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="col-xxl-6 col-md-6" style="padding: 0 !important; display: flex; flex-direction: column;">
       <div class="add-contract-theme">
         <div style="max-width: 450px;">
-          <span style="font-size: 18px;">Xin chào, {{this.currentName}}</span>
+          <span style="font-size: 18px;">{{'hello' | translate}}, {{this.currentName}}</span>
           <br><br>
           <span>{{'text.dashboard.theme' | translate}}</span>
         </div>
@@ -95,7 +95,7 @@
       <div class="contract-request">
         <div class="row_text_1" style="padding-bottom: 10px;">
           <span style="color: #001A4D; font-weight: 600; font-size: 14px;">{{'request.process' | translate}}</span>
-          <span style="color: #0041C4; cursor: pointer;"><b (click)="openLink('/main/c/receive/wait-processing')">Xem tất cả</b></span>
+          <span style="color: #0041C4; cursor: pointer;"><b (click)="openLink('/main/c/receive/wait-processing')">{{'view_all' | translate}}</b></span>
         </div>
         <!-- <br> -->
         <div class="row_text_2" *ngFor="let item of contractRequestList; let i = index" [style.border-bottom]="i != listNotification.length-1 ? '' : ''" style="padding: 4px;margin-bottom: 16px;">
