sửa giao diện tạo hợp đồng mới

--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,146 +1,159 @@
 <!-- form step 4 -->
-<div class="labelOrg">{{'contract' | translate}}</div>
-<div class="infor_contact">
-    <div class="row">
-        <div class="col-md-5">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <div class="label_item">{{'contract.file.name' | translate}}</div>
-                        <div>
-                            <div [innerHTML]="this.datas.file_name" class="input_text"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <div class="label_item">{{'expiration-date' | translate}}</div>
-                        <div>
-                            <div [innerHTML]="this.datas.sign_time | date: 'dd/MM/yyyy'" class="input_text"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-5">
-            <div class="form-group">
-                <div class="label_item">{{'note' | translate}}</div>
-                <div>
-                    <div [innerHTML]="this.datas.notes" class="input_text"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="labelOrg">{{'side.sign' | translate}}</div>
-<div class="determine_contact">
-    <div class="user_contact">
-        <div class="label">{{'to_chuc_cua_toi' | translate}}</div>
-        <div class="content_determine">
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.view' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of this.is_origanzation_reviewer">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.sign' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of this.is_origanzation_signature">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.doc' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of this.is_origanzation_document">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="partner_contact" *ngFor="let record of this.data_parnter_organization;">
-        <div class="label">{{'partner' | translate}} {{record.name | uppercase}}</div>
-        <div class="content_determine">
-            <div class="row" *ngIf="record.type == 2">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.lead' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of getPartnerCoordinationer(record)">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.view' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of getPartnerReviewer(record)">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.sign' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of getPartnerSignature(record)">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-5" *ngIf="record.type == 2">
-                    <div class="form-group">
-                        <div class="label_item">{{'user.doc' | translate}}</div>
-                        <div class="input_text">
-                            <div *ngFor="let item of getPartnerDocument(record)">
-                                <div>{{item.name}} - {{item.email}}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="footer-infor-contract">
-    <div style="width: 200px;">
-        <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}</button>
-    </div>
-    <div class="content_footer"></div>
+<div class="container-fluid" style="padding: 16px;">
+    <div class="labelOrg">{{'contract.info' | translate}}</div>
     <div>
-        <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">{{'btn.save-draft' | translate}}</button>
-        <button (click)="submit('finish_contract')" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
+        <div class="row mt-8px">
+            <div class="col-md-12">
+                <div class="label_item">{{'contract.file.name' | translate}}</div>
+                <div class="content-input mt-6px">
+                    <div [innerHTML]="this.datas.file_name"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-8px">
+            <div class="col-md-9" style="padding-right: 8px;">
+                <div class="label_item">{{'note' | translate}}</div>
+                <div class="content-input mt-6px">
+                    <div [innerHTML]="this.datas.notes"></div>
+                </div>
+            </div>
+
+            <div class="col-md-3" style="padding-left: 7px;">
+                <div class="label_item">{{'expiration-date' | translate}}</div>
+                <div class="content-input mt-6px">
+                    <div [innerHTML]="this.datas.sign_time | date: 'dd/MM/yyyy'"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="labelOrg" style="margin-top: 20px;">{{'side.sign' | translate}}</div>
+
+    <div>
+        <div *ngFor="let item of this.datas.is_determine_clone">
+            <div class="boder-info flex mt-8px">
+                <div class="ordering"> 
+                    <div class="content-index">
+                        {{item.ordering}}
+                    </div>
+                </div>
+
+                <div style="padding: 16px 16px 16px 0px; width: 100%;">
+                    <div class="name-info">{{item.name}}</div>
+
+                    <div class="mt-16px" *ngIf="item.type == 2">
+                        <div class="label">{{'user.lead' | translate}}</div>
+                
+                        <div *ngFor="let reviewer of item.recipients">
+                            <div *ngIf="reviewer.role == 1" class="flex mt-16px">
+                                <div class="content-index">{{reviewer.ordering}}</div>
+                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="mt-16px" *ngIf="item.type == 1 || item.type == 2">
+                        <div class="label">{{'user.view' | translate}}</div>
+                
+                        <div *ngFor="let reviewer of item.recipients">
+                            <div *ngIf="reviewer.role == 2" class="flex mt-16px">
+                                <div class="content-index">{{reviewer.ordering}}</div>
+                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                            </div>
+                        </div>
+                    </div>   
+                
+                    <div class="mt-16px">
+                        <div class="label">{{'user.sign' | translate}}</div>
+                
+                        <div *ngFor="let reviewer of item.recipients">
+                            <div *ngIf="reviewer.role == 3" class="flex mt-16px">
+                                <div class="content-index">{{reviewer.ordering}}</div>
+                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                            </div>
+                        </div>
+                    </div>  
+                
+                    <div class="mt-16px" *ngIf="item.type == 1 || item.type == 2">
+                        <div class="label">{{'user.doc' | translate}}</div>
+                
+                        <div *ngFor="let reviewer of item.recipients">
+                            <div *ngIf="reviewer.role == 4" class="flex mt-16px">
+                                <div class="content-index">{{reviewer.ordering}}</div>
+                                <div class="item-name">{{reviewer.name}} - {{reviewer.email}}</div>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="determine_contact mt-8px">
+        <div class="partner_contact" *ngFor="let record of this.data_parnter_organization;">
+            <div class="label">{{'partner' | translate}} {{record.name | uppercase}}</div>
+            <div class="content_determine">
+                <div class="row" *ngIf="record.type == 2">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <div class="label_item">{{'user.lead' | translate}}</div>
+                            <div class="input_text">
+                                <div *ngFor="let item of getPartnerCoordinationer(record)">
+                                    <div>{{item.name}} - {{item.email}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <div class="label_item">{{'user.view 1' | translate}}</div>
+                            <div class="input_text">
+                                <div *ngFor="let item of getPartnerReviewer(record)">
+                                    <div>{{item.name}} - {{item.email}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <div class="label_item">{{'user.sign' | translate}}</div>
+                            <div class="input_text">
+                                <div *ngFor="let item of getPartnerSignature(record)">
+                                    <div>{{item.name}} - {{item.email}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-5" *ngIf="record.type == 2">
+                        <div class="form-group">
+                            <div class="label_item">{{'user.doc' | translate}}</div>
+                            <div class="input_text">
+                                <div *ngFor="let item of getPartnerDocument(record)">
+                                    <div>{{item.name}} - {{item.email}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="footer-infor-contract">
+        <div style="width: 200px;">
+            <button (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button-previous">{{'btn.previous' | translate}}</button>
+        </div>
+        <div class="content_footer"></div>
+        <div>
+            <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">{{'btn.save-draft' | translate}}</button>
+            <button (click)="submit('finish_contract')" type="button" name="next" class="next action-button pull-right">{{'btn.done' | translate}}</button>
+        </div>
     </div>
 </div>
 
