--- a/src/app/main/contract/batch-contract/contract-batch-header/contract-batch-header.component.html
+++ b/src/app/main/contract/batch-contract/contract-batch-header/contract-batch-header.component.html
@@ -1,15 +1,17 @@
-<div class="col-md-12 col-md-offset-3" style="display: flex">
+<div class="col-md-12 col-md-offset-3">
     <!-- step by step -->
-    <div class="activity-card col" style="padding: 10px;text-align: center;">
-      <ul id="progressbar">
-        <li [ngClass]="(stepBatch == 'infor-contract-batch' || stepBatch == 'confirm-contract-batch') ? 'active ' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepBatch == 'infor-contract-batch'}">{{'contract.information' | translate}}</div>
-        </li>
-  
-        <li [ngClass]="stepBatch == 'confirm-contract-batch' ? 'active' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepBatch == 'confirm-contract-batch'}">{{'contract.confirm' | translate}}</div>
-        </li>
-      </ul>
+    <div class="header-step">
+      <div class="activity-card col" style="text-align: center;">
+        <ul id="progressbar">
+          <li [ngClass]="(stepBatch == 'infor-contract-batch' || stepBatch == 'confirm-contract-batch') ? 'active ' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepBatch == 'infor-contract-batch'}">{{'contract.information' | translate}}</div>
+          </li>
+    
+          <li [ngClass]="stepBatch == 'confirm-contract-batch' ? 'active' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepBatch == 'confirm-contract-batch'}">{{'contract.confirm' | translate}}</div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
   
