--- a/src/app/main/contract/form-contract/contract-form-header/contract-form-header.component.html
+++ b/src/app/main/contract/form-contract/contract-form-header/contract-form-header.component.html
@@ -1,30 +1,31 @@
 <!--</div>-->
-<div class="col-md-12 col-md-offset-3" style="display: flex">
+<div class="col-md-12 col-md-offset-3">
     <!-- step by step -->
-
-    <div class="activity-card col" style="padding: 10px;text-align: center;">
-      <ul id="progressbar">
-        <li [ngClass]="(stepForm == 'infor-contract-form' || stepForm == 'party-contract-form' ||
-        stepForm == 'sample-contract-form' || stepForm == 'confirm-contract-form') ? 'active ' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepForm == 'infor-contract-form'}">{{'contract.information' | translate}}</div>
-        </li>
-  
-        <li [ngClass]="(stepForm == 'party-contract-form' || stepForm == 'sample-contract-form' ||
-                       stepForm == 'confirm-contract-form') ? 'active' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepForm == 'party-contract-form'}">{{'contract.identify-signer' | translate}}</div>
-        </li>
-  
-        <li [ngClass]="(stepForm == 'sample-contract-form' || stepForm == 'confirm-contract-form') ? 'active' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepForm == 'sample-contract-form'}">{{'contract.design' | translate}}</div>
-        </li>
-  
-        <li [ngClass]="stepForm == 'confirm-contract-form' ? 'active' : 'inactive'">
-          <div [ngClass]="{'current_active' : stepForm == 'confirm-contract-form'}">{{'contract.confirm' | translate}}</div>
-        </li>
-      </ul>
-    </div>
-    <div>
-      <img src="assets/img/icon_close.svg" width="24px" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+    <div class="header-step">
+      <div class="activity-card col" style="text-align: center">
+        <ul id="progressbar">
+          <li [ngClass]="(stepForm == 'infor-contract-form' || stepForm == 'party-contract-form' ||
+          stepForm == 'sample-contract-form' || stepForm == 'confirm-contract-form') ? 'active ' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepForm == 'infor-contract-form'}">{{'contract.information' | translate}}</div>
+          </li>
+    
+          <li [ngClass]="(stepForm == 'party-contract-form' || stepForm == 'sample-contract-form' ||
+                        stepForm == 'confirm-contract-form') ? 'active' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepForm == 'party-contract-form'}">{{'contract.identify-signer' | translate}}</div>
+          </li>
+    
+          <li [ngClass]="(stepForm == 'sample-contract-form' || stepForm == 'confirm-contract-form') ? 'active' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepForm == 'sample-contract-form'}">{{'contract.design' | translate}}</div>
+          </li>
+    
+          <li [ngClass]="stepForm == 'confirm-contract-form' ? 'active' : 'inactive'">
+            <div [ngClass]="{'current_active' : stepForm == 'confirm-contract-form'}">{{'contract.confirm' | translate}}</div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <img src="assets/img/icon_close.svg" width="24px" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+      </div>
     </div>
   </div>
   
