--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,29 +1,31 @@
 <!--</div>-->
-<div class="col-md-12 col-md-offset-3" style="display: flex">
+<div class="col-md-12 col-md-offset-3">
   <!-- step by step -->
-  <div class="activity-card col" style="padding: 10px;text-align: center;">
-    <ul id="progressbar">
-      <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
-                      step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'infor-contract'}">{{'contract.information' | translate}}</div>
-      </li>
-
-      <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
-                     step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'determine-contract'}">{{'contract.identify-signer' | translate}}</div>
-      </li>
-
-      <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'sample-contract'}">{{'contract.design' | translate}}</div>
-      </li>
-
-      <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">{{'contract.confirm' | translate}}</div>
-      </li>
-    </ul>
-  </div>
-  <div>
-    <img src="assets/img/icon_close.svg" width="24px" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+  <div class="header-step">
+    <div class="activity-card col" style="text-align: center;">
+      <ul id="progressbar">
+        <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
+                        step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
+          <div [ngClass]="{'current_active' : step == 'infor-contract'}">{{'contract.information' | translate}}</div>
+        </li>
+  
+        <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
+                       step == 'confirm-contract') ? 'active' : 'inactive'">
+          <div [ngClass]="{'current_active' : step == 'determine-contract'}">{{'contract.identify-signer' | translate}}</div>
+        </li>
+  
+        <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
+          <div [ngClass]="{'current_active' : step == 'sample-contract'}">{{'contract.design' | translate}}</div>
+        </li>
+  
+        <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
+          <div [ngClass]="{'current_active' : step == 'confirm-contract'}">{{'contract.confirm' | translate}}</div>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <img src="assets/img/icon_close.svg" width="24px" class="icon_close" ngbTooltip="{{'btn.close' | translate}}" (click)="open(modalNotifi)"/>
+    </div>
   </div>
 </div>
 
