--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -6,12 +6,13 @@
   }
 }
 .input_text {
+  background-color: #F7FAFD;
   padding-left: 10px;
   outline: none;
-  height: 37px;
+  height: 48px;
   width: 100%;
-  border-radius: 5px;
-  border: 1px solid #106DB6;
+  border-radius: 6px;
+  border: 1px solid #E6EDFA;
 }
 
 //upload file
@@ -36,10 +37,20 @@ input[type="file"] {
 }
 
 //label item form
+.form-group {
+  .input_text::placeholder {
+    color: #AEC7E5;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 21px;
+  }
+}
+
 .label_item{
   padding: 12px 0px 3px;
-  font-weight: 500;
-  color: #0160AE;
+  font-weight: 700;
+  font-size: 12px;
+  color: #2B3D60;
 }
 
 .require_star{
@@ -63,30 +74,34 @@ input[type="file"] {
       width: 100%;
       border-radius: 5px;
       input {
+        background-color: #F7FAFD;
         outline: none;
         width: 100%;
-        height: 38px;
+        height: 48px;
         border-radius: 5px;
-        border: 1px solid #106DB6;
+        border: 1px solid #E6EDFA;
         padding-left: 10px;
         cursor: pointer;
       }
       .div_file_attach {
+        background-color: #F7FAFD;
         outline: none;
         width: 100%;
-        min-height: 38px;
+        min-height: 48px;
         border-radius: 5px;
-        border: 1px solid #106DB6;
-        padding: 7px 10px;
+        border: 1px solid #E6EDFA;
+        padding: 12px 10px;
         //cursor: pointer;
         max-height: 113px;
         overflow: auto;
       }
       >img {
+        width: 24px;
+        height: 24px;
         cursor: pointer;
         position: absolute;
-        top: 10px;
-        right: 25px;
+        top: 12px;
+        right: 10px;
       }
       >img:hover{
         cursor: pointer;
@@ -96,12 +111,18 @@ input[type="file"] {
 }
 
 .file-contract{
-  height: 80px;
-  border: 1px solid #106DB6;
+  background-color: #F7FAFD;
+  height: 140px;
+  border: 1px solid #E6EDFA;
   cursor: pointer;
-  padding: 10px;
+  padding: 24px;
   text-align: center;
   border-radius: 5px;
+
+  img {
+    height: 36px;
+    width: 36px;
+  }
 }
 
 .form-control{
@@ -150,7 +171,7 @@ button {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-top: 14.5vh;
+  // padding-top: 14.5vh;
   .content_footer{
     //text-align: center;
     //margin: 10px;
@@ -170,15 +191,20 @@ button {
     padding: 0;
   }
   .p-calendar-w-btn, .p-calendar-w-btn .p-inputtext {
-    height: 38px;
+    height: 48px;
   }
   .p-calendar-w-btn .p-inputtext{
-    border: 1px solid #106DB6 !important;
+    border: 6px;
+    background-color: #F7FAFD;
+    border: 1px solid #E6EDFA !important;
     outline: 0 !important;
     box-shadow: none !important;
   }
+  
+  // .p-calendar-w-btn .p-datepicker-trigger {
+  //   display: none;
+  // }
 }
-
 
 .error-detail{
   font-size: inherit;
@@ -203,22 +229,66 @@ button {
   width: 100%;
   outline:0px;
 }
+
 :host ::ng-deep {
   .p-dropdown, .p-multiselect {
-      border: 1px solid #106DB6;
-      border-radius: 5px;
-      height: 38px;
-      width: 100%;
-      outline: 0;
-      color: black !important;
+    background-color: #F7FAFD;
+    border: 1px solid #E6EDFA;
+    border-radius: 5px;
+    height: 48px;
+    width: 100%;
+    outline: 0;
+    color: black !important;
+    position: relative;
   }
-  .p-dropdown-label, .p-multiselect-label {
-      padding: 7px 7px 5px 10px;
+  .p-dropdown-label {
+    padding: 12px 10px 5px 7px;
+    position: relative;
   }
+
+  .p-multiselect-label {
+    padding: 12px 10px 5px 7px;
+  }
+
+  .p-dropdown-label::after, .p-multiselect-label::after {
+    content: '';
+    background-image: url('../../../../../../assets/img/arrow-down.png'); /* Replace with your image URL */
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 10px; /* Adjust to position the icon correctly */
+    top: 50%;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+  }
+  
+  .p-dropdown .p-dropdown-trigger, .p-multiselect .p-multiselect-trigger {
+    display: none; /* Hide the default dropdown icon */
+  }
+  
   .p-multiselect .p-multiselect-label.p-placeholder, .p-dropdown .p-dropdown-label.p-placeholder {
-    color: #6c757d !important;
+    color: #AEC7E5 !important;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 21px;
   }
 }
+
 .invalid{
   color: red;
+}
+
+.drag-contract {
+  color: #00186D; 
+  font-size: 14px; 
+  font-weight: 700;
+  line-height: 21px;
+}
+
+.note-drag-contract {
+  color: #A8B5CE; 
+  font-size: 12px; 
+  font-weight: 400;
+  line-height: 18px;
 }
