--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -1,6 +1,6 @@
 .sample-contract {
   // height: calc(100vh - 246px);
-  height: calc(100vh - 287px);
+  height: calc(100vh - 239px);
 
   &__file {
     //position: relative;
@@ -51,29 +51,29 @@
   &__information {
     &--drag {
        #element-drag{
-        height: 100px;
+        height: 86px;
       }
       .content-drag {
-        //cursor: pointer;
         width: 100%;
-        height: 30px;
-        background-color: #EBF8FF;
-        border-radius: 5px;
-        border: 1px solid #106DB6;
+        height: 42px;
+        background-color: #F7FAFD;
+        border-radius: 6px;
+        border: 1px solid #E6EDFA;
         color: #106DB6;
         text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
+        padding-left: 16px;
+        padding-right: 16px;
       }
       .content-drag1 {
         //cursor: pointer;
         width: 100%;
-        height: 30px;
-        background-color: #EBF8FF;
+        // height: 86px;
+        background-color: #F7FAFD;
         border-radius: 5px;
-        border: 1px solid #106DB6;
+        border: 1px solid #E6EDFA;
         color: #106DB6;
         text-align: center;
         display: flex;
@@ -81,19 +81,19 @@
         align-items: center;
         flex-direction: column;
       }
-      .show-list-name-class{
-        display: inline-block; 
-        margin-bottom: 15px;
-      }
+      // .show-list-name-class{
+      //   // display: inline-block; 
+      //   margin-bottom: 15px;
+      // }
 
-      .show-list-name-class:nth-last-child(4) {
-        //float: left;
-        margin-right: 11px;
-      }
+      // .show-list-name-class:nth-last-child(4) {
+      //   //float: left;
+      //   margin-right: 11px;
+      // }
 
-      .show-list-name-class:nth-last-child(2) {
-        margin-right: 11px;
-      }
+      // .show-list-name-class:nth-last-child(2) {
+      //   margin-right: 11px;
+      // }
     }
 
     &--user-sign {
@@ -114,9 +114,10 @@
         }
 
         input {
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #87CAFF;
-          height: 40px;
+          border: 1px solid #E6EDFA;
+          height: 48px;
           outline: none;
         }
       }
@@ -127,8 +128,10 @@
         }
 
         select {
+          height: 48px;
+          background-color: #F7FAFD;
           color: #333333;
-          border: 1px solid #87CAFF;
+          border: 1px solid #E6EDFA;
           outline: none;
 
           &.form-select:disabled {
@@ -144,36 +147,34 @@
 
     .flex-column {
       .location {
-        display: flex;
-        justify-content: space-around;
+          display: flex;
+          justify-content: space-around;
       }
-
+  
       .location-drag {
-        //display: flex;
-        float: left;
-        align-items: center;
-
-        div {
-          //padding-right: 20px;
-          //width: 88px;
-          width: 56px;
-          //font-size: 13px;
-          color: #666666;
-          text-align: center;
+          display: flex;
+          align-items: center;
           float: left;
-          padding-right: 15px;
-          padding-top: 10px;
-        }
-
-        input {
-          outline: none;
-          width: 88px;
-          height: 40px;
-          border-radius: 5px;
-          border: 1px solid #87CAFF;
-        }
+          
+          .label {
+              width: 56px;
+              color: #666666;
+              text-align: center;
+              float: left;
+              padding-right: 15px;
+              padding-top: 10px;
+          }
+  
+          input {
+              outline: none;
+              width: 88px;
+              height: 40px;
+              border-radius: 5px;
+              border: 1px solid #87CAFF;
+          }
       }
-    }
+  }
+  
 
     @media screen and (max-height: 781px) {
       .location-change {
@@ -188,13 +189,15 @@
     color: #106DB6;
     font-style: normal;
     font-weight: normal;
+    padding-bottom: 5px;
   }
 
   .label-require {
-    font-size: 13px;
-    font-style: normal;
-    font-weight: normal;
-    color: #F48465;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 18px;
+    color: var(--text-primary) !important;
+    text-transform: uppercase;
   }
 }
 
@@ -308,7 +311,7 @@
   border-radius: 6px;
   cursor: pointer;
   padding: 10px 12px;
-  margin: 10px 5px;
+  margin: 0px 0px 0px 5px;
 }
 
 .draft-button {
@@ -330,16 +333,16 @@
   color: #0041C4;
   border: 1px solid var(--Primary, #0041C4);
   border-radius: 6px;
-  cursor: pointer;
+  // cursor: pointer;
   padding: 9px 12px;
-  margin: 10px 5px;
+  // margin: 10px 5px;
 }
 
 .footer-sample-contract {
-  border-top: 1px solid #ddd;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // border-top: 1px solid #ddd;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
 
   .content_footer {
     color: #0160AE;
@@ -426,11 +429,11 @@
             &--drag {
                 .content-drag {
                     //cursor: pointer;
-                    width: 100%;
-                    height: 30px;
-                    background-color: #EBF8FF;
+                    width: 100% !important;
+                    // height: 30px;
+                    background-color: #F7FAFD;
                     border-radius: 5px;
-                    border: 1px solid #106DB6;
+                    border: 1px solid #E6EDFA;
                     color: #106DB6;
                     text-align: center;
                     display: flex;
@@ -444,10 +447,10 @@
                 }
                 .content-drag1 {
                     width: 100%;
-                    height: 30px;
-                    background-color: #EBF8FF;
+                    // height: 30px;
+                    background-color: #F7FAFD;
                     border-radius: 5px;
-                    border: 1px solid #106DB6;
+                    border: 1px solid #E6EDFA;
                     color: #106DB6;
                     text-align: center;
                     display: flex;
@@ -456,7 +459,7 @@
                     flex-direction: row;
                 }
                 .content-drag1 span{
-                    width: 50px;            
+                    width: 50px;       
                 }
             }
             .flex-column{
@@ -502,10 +505,10 @@
               .content-drag {
                   //cursor: pointer;
                   width: 100%;
-                  height: 30px;
-                  background-color: #EBF8FF;
+                  // height: 30px;
+                  background-color: #F7FAFD;
                   border-radius: 5px;
-                  border: 1px solid #106DB6;
+                  border: 1px solid #E6EDFA;
                   color: #106DB6;
                   text-align: center;
                   display: flex;
@@ -519,10 +522,10 @@
               }
               .content-drag1 {
                   width: 100%;
-                  height: 30px;
-                  background-color: #EBF8FF;
+                  // height: 30px;
+                  background-color: #F7FAFD;
                   border-radius: 5px;
-                  border: 1px solid #106DB6;
+                  border: 1px solid #E6EDFA;
                   color: #106DB6;
                   text-align: center;
                   display: flex;
@@ -570,10 +573,10 @@
         .content-drag {
           //cursor: pointer;
           width: 100%;
-          height: 30px;
-          background-color: #EBF8FF;
+          // height: 30px;
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #106DB6;
+          border: 1px solid #E6EDFA;
           color: #106DB6;
           text-align: center;
           display: flex;
@@ -587,10 +590,10 @@
         }
         .content-drag1 {
           width: 100%;
-          height: 30px;
-          background-color: #EBF8FF;
+          // height: 30px;
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #106DB6;
+          border: 1px solid #E6EDFA;
           color: #106DB6;
           text-align: center;
           display: flex;
@@ -638,10 +641,10 @@
         .content-drag {
           //cursor: pointer;
           width: 100%;
-          height: 30px;
-          background-color: #EBF8FF;
+          // height: 30px;
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #106DB6;
+          border: 1px solid #E6EDFA;
           color: #106DB6;
           text-align: center;
           display: flex;
@@ -656,10 +659,10 @@
         .content-drag1 {
           //cursor: pointer;
           width: 100%;
-          height: 30px;
-          background-color: #EBF8FF;
+          // height: 30px;
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #106DB6;
+          border: 1px solid #E6EDFA;
           color: #106DB6;
           text-align: center;
           display: flex;
@@ -840,4 +843,20 @@
 
 .options-list li:hover {
   background-color: #f0f0f0;
+}
+
+.form-control {
+  height: 48px;
+  background-color: #F7FAFD;
+  border: 1px solid #E6EDFA;
+}
+
+.input-position-size {
+  display: block;
+  background-color: #F7FAFD;
+  border: 1px solid #E6EDFA;
+  border-radius: 6px;
+  height: 48px;
+  width: 100% !important;
+  padding: 10px;
 }
