sửa hợp đồng đơn lẻ theo mẫu

--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="sign-info-content">
       <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
-      <ng-template #content>Thông tin chữ ký ảnh</ng-template>
-      <ng-template #other_content>Thông tin chữ ký số</ng-template>
+      <ng-template #content>Thông tin chữ ký ảnh 1</ng-template>
+      <ng-template #other_content>Thông tin chữ ký số 2</ng-template>
     </div>
   </div>
 
