--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -1,5 +1,6 @@
 .sample-contract {
-  height: calc(100vh - 287px);
+  // height: calc(100vh - 246px);
+  height: calc(100vh - 239px);
 
   &__file {
     //position: relative;
@@ -49,28 +50,50 @@
 
   &__information {
     &--drag {
+       #element-drag{
+        height: 86px;
+      }
       .content-drag {
-        //cursor: pointer;
         width: 100%;
-        height: 30px;
-        background-color: #EBF8FF;
-        border-radius: 5px;
-        border: 1px solid #106DB6;
+        height: 42px;
+        background-color: #F7FAFD;
+        border-radius: 6px;
+        border: 1px solid #E6EDFA;
         color: #106DB6;
         text-align: center;
         display: flex;
         justify-content: center;
-        align-items: center
+        align-items: center;
+        padding-left: 16px;
+        padding-right: 16px;
       }
+      .content-drag1 {
+        //cursor: pointer;
+        width: 100%;
+        // height: 86px;
+        background-color: #F7FAFD;
+        border-radius: 5px;
+        border: 1px solid #E6EDFA;
+        color: #106DB6;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+      // .show-list-name-class{
+      //   // display: inline-block; 
+      //   margin-bottom: 15px;
+      // }
 
-      .show-list-name-class:nth-last-child(4) {
-        //float: left;
-        margin-right: 11px;
-      }
+      // .show-list-name-class:nth-last-child(4) {
+      //   //float: left;
+      //   margin-right: 11px;
+      // }
 
-      .show-list-name-class:nth-last-child(2) {
-        margin-right: 11px;
-      }
+      // .show-list-name-class:nth-last-child(2) {
+      //   margin-right: 11px;
+      // }
     }
 
     &--user-sign {
@@ -91,9 +114,10 @@
         }
 
         input {
+          background-color: #F7FAFD;
           border-radius: 5px;
-          border: 1px solid #87CAFF;
-          height: 40px;
+          border: 1px solid #E6EDFA;
+          height: 48px;
           outline: none;
         }
       }
@@ -104,8 +128,10 @@
         }
 
         select {
+          height: 48px;
+          background-color: #F7FAFD;
           color: #333333;
-          border: 1px solid #87CAFF;
+          border: 1px solid #E6EDFA;
           outline: none;
 
           &.form-select:disabled {
@@ -121,41 +147,39 @@
 
     .flex-column {
       .location {
-        display: flex;
-        justify-content: space-around
+          display: flex;
+          justify-content: space-around;
       }
-
+  
       .location-drag {
-        //display: flex;
-        float: left;
-        align-items: center;
-
-        div {
-          //padding-right: 20px;
-          //width: 88px;
-          width: 56px;
-          //font-size: 13px;
-          color: #666666;
-          text-align: center;
+          display: flex;
+          align-items: center;
           float: left;
-          padding-right: 15px;
-          padding-top: 10px;
-        }
-
-        input {
-          outline: none;
-          width: 88px;
-          height: 40px;
-          border-radius: 5px;
-          border: 1px solid #87CAFF;
-        }
+          
+          .label {
+              width: 56px;
+              color: #666666;
+              text-align: center;
+              float: left;
+              padding-right: 15px;
+              padding-top: 10px;
+          }
+  
+          input {
+              outline: none;
+              width: 88px;
+              height: 40px;
+              border-radius: 5px;
+              border: 1px solid #87CAFF;
+          }
       }
-    }
+  }
+  
 
     @media screen and (max-height: 781px) {
       .location-change {
+        height: 210px;
         overflow: auto;
-        height: 225px
       }
     }
   }
@@ -165,13 +189,15 @@
     color: #106DB6;
     font-style: normal;
     font-weight: normal;
+    padding-bottom: 5px;
   }
 
   .label-require {
-    font-size: 13px;
-    font-style: normal;
-    font-weight: normal;
-    color: #F48465;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 18px;
+    color: var(--text-primary) !important;
+    text-transform: uppercase;
   }
 }
 
@@ -226,12 +252,11 @@
   outline: none;
   touch-action: none;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   color: rgba(27, 51, 91, 1);
   /* This makes things *much* easier */
   box-sizing: border-box;
-  // border-radius: 6px;
   //padding: 10px;
   .name-sig-img-daky {
     position: absolute;
@@ -270,11 +295,11 @@
   padding-left: 7px;
 }
 
-#element-drag-text,
-#element-drag {
-  //display: inline-block;
-  //width: ;
-}
+// #element-drag-text,
+// #element-drag {
+//   //display: inline-block;
+//   //width: ;
+// }
 
 //style button
 .action-button {
@@ -286,7 +311,7 @@
   border-radius: 6px;
   cursor: pointer;
   padding: 10px 12px;
-  margin: 10px 5px;
+  margin: 0px 0px 0px 5px;
 }
 
 .draft-button {
@@ -308,21 +333,399 @@
   color: #0041C4;
   border: 1px solid var(--Primary, #0041C4);
   border-radius: 6px;
-  cursor: pointer;
+  // cursor: pointer;
   padding: 9px 12px;
-  margin: 10px 5px;
+  // margin: 10px 5px;
 }
 
 .footer-sample-contract {
-  border-top: 1px solid #ddd;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // border-top: 1px solid #ddd;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
 
   .content_footer {
     color: #0160AE;
     font-size: 13px;
     font-weight: 500;
+  }
+}
+
+.input1 {
+  box-sizing: border-box; 
+  text-align: center; 
+  width: 40px;
+  height: 22px;
+  background: #FFFFFF;
+  border: 1px solid #87CAFF;
+  border-radius: 5px; 
+}
+
+.handle {
+  position: absolute;
+  background-color: orange;
+}
+.top-left {
+  width: 10px;
+  height: 5px;
+  top: 0;
+}
+.left-top {
+  width: 5px;
+  height: 10px;
+  top: 0;
+  background-color: red;
+}
+.top-right {
+  width: 10px;
+  height: 5px;
+  top: 0;
+  right: 0;
+}
+.right-top {
+  width: 5px;
+  height: 10px;
+  top: 0;
+  right: 0;
+  background-color: red;
+}
+
+.bottom-left {
+  width: 10px;
+  height: 5px;
+  bottom: 0;
+}
+.left-bottom {
+  width: 5px;
+  height: 10px;
+  bottom: 0;
+  background-color: red;
+}
+.bottom-right {
+  width: 10px;
+  height: 5px;
+  bottom: 0;
+  right: 0;
+}
+.right-bottom {
+  width: 5px;
+  height: 10px;
+  bottom: 0;
+  right: 0;
+  background-color: red;
+}
+
+@media screen and (min-width:1224px) and (max-width:1280px){
+    .sample-contract{
+        height: calc(100vh - 260px);
+        .label{
+          font-size: 14px;
+        }
+        .viewer-pdf.isDrag{
+          background-color: #f3f7f9; 
+          position: relative;
+        }
+        &__information{
+            &--drag {
+                .content-drag {
+                    //cursor: pointer;
+                    width: 100% !important;
+                    // height: 30px;
+                    background-color: #F7FAFD;
+                    border-radius: 5px;
+                    border: 1px solid #E6EDFA;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag span{
+                    width: 50px;
+                    margin-left: 5px;
+                }
+                .content-drag1 {
+                    width: 100%;
+                    // height: 30px;
+                    background-color: #F7FAFD;
+                    border-radius: 5px;
+                    border: 1px solid #E6EDFA;
+                    color: #106DB6;
+                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: row;
+                }
+                .content-drag1 span{
+                    width: 50px;       
+                }
+            }
+            .flex-column{
+                .location {
+                    display: flex;
+                    justify-content: space-around;
+                }
+                .location-drag{
+                    float: left;
+                    align-items: center;
+
+                    div {
+                        width: 48px;
+                        color: #666666;
+                        text-align: center;
+                        float: left;
+                        padding-right: 15px;
+                        padding-top: 0px;
+                    }
+
+                    input {
+                        width: 55px;
+                        height: 35px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1280px) and (max-width:1440px){
+  .sample-contract{
+      height: calc(100vh - 260px);
+      .label{
+        font-size: 14px;
+      }
+      .viewer-pdf.isDrag{
+        background-color: #f3f7f9; 
+        position: relative;
+      }
+      &__information{
+          &--drag {
+              .content-drag {
+                  //cursor: pointer;
+                  width: 100%;
+                  // height: 30px;
+                  background-color: #F7FAFD;
+                  border-radius: 5px;
+                  border: 1px solid #E6EDFA;
+                  color: #106DB6;
+                  text-align: center;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  flex-direction: row;
+              }
+              .content-drag span{
+                  width: 50px;
+                  margin-left: 5px;
+              }
+              .content-drag1 {
+                  width: 100%;
+                  // height: 30px;
+                  background-color: #F7FAFD;
+                  border-radius: 5px;
+                  border: 1px solid #E6EDFA;
+                  color: #106DB6;
+                  text-align: center;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  flex-direction: row;
+              }
+              .content-drag1 span{
+                  width: 50px;            
+              }
+          }
+          .flex-column{
+              .location {
+                  display: flex;
+                  justify-content: space-around;
+              }
+              .location-drag{
+                  float: left;
+                  align-items: center;
+
+                  div {
+                      width: 48px;
+                      color: #666666;
+                      text-align: center;
+                      float: left;
+                      padding-right: 15px;
+                      padding-top: 0px;
+                  }
+
+                  input {
+                      width: 55px;
+                      height: 35px;
+                  }
+              }
+          }
+      }
+  }
+}
+
+@media screen and (min-width:1440px) and (max-width:1600px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        .content-drag {
+          //cursor: pointer;
+          width: 100%;
+          // height: 30px;
+          background-color: #F7FAFD;
+          border-radius: 5px;
+          border: 1px solid #E6EDFA;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag span{
+          width: 50px;
+          margin-left: 5px;
+        }
+        .content-drag1 {
+          width: 100%;
+          // height: 30px;
+          background-color: #F7FAFD;
+          border-radius: 5px;
+          border: 1px solid #E6EDFA;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag1 span{
+          width: 50px;            
+        }
+      }
+      .flex-column{
+        .location {
+          display: flex;
+          justify-content: space-around;
+        }
+        .location-drag{
+          float: left;
+          align-items: center;
+
+          div {
+            width: 40px;
+            color: #666666;
+            text-align: center;
+            float: left;
+            padding-right: 15px;
+            padding-top: 10px;
+          }
+    
+          input {
+            width: 80px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width:1600px) and (max-width:1824px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        .content-drag {
+          //cursor: pointer;
+          width: 100%;
+          // height: 30px;
+          background-color: #F7FAFD;
+          border-radius: 5px;
+          border: 1px solid #E6EDFA;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag span{
+          width: 50px;
+          margin-left: 5px;
+        }
+        .content-drag1 {
+          //cursor: pointer;
+          width: 100%;
+          // height: 30px;
+          background-color: #F7FAFD;
+          border-radius: 5px;
+          border: 1px solid #E6EDFA;
+          color: #106DB6;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+        .content-drag1 span{
+          width: 50px;            
+        }
+      }
+      .flex-column{
+        .location {
+          display: flex;
+          justify-content: space-around;
+        }
+        .location-drag{
+          float: left;
+          align-items: center;
+
+          div {
+            width: 55px;
+            color: #666666;
+            text-align: center;
+            float: left;
+            padding-right: 15px;
+            padding-top: 10px;
+          }
+    
+          input {
+            width: 80px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-height:630px) and (max-height:780px) {
+  .sample-contract{
+    height: calc(100vh - 260px);
+    &__information{
+      &--drag{
+        #element-drag{
+          height: 80px;
+        }
+        .show-list-name-class{
+          #element-drag{
+            margin-bottom: 1px;
+          }
+        }
+      }
+      &--user-sign {
+        label {
+          padding-bottom: 1px;
+        }
+      }
+      .location-change {
+        height: 150px;
+        overflow: auto;
+      }
+    }
   }
 }
 
@@ -343,16 +746,6 @@
   margin-left: 5px
 }
 
-.input1 {
-  box-sizing: border-box; 
-  text-align: center; 
-  width: 40px;
-  height: 22px;
-  background: #FFFFFF;
-  border: 1px solid #87CAFF;
-  border-radius: 5px; 
-}
-
 .text-ellipsis {
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -361,8 +754,109 @@
   max-width: 106px;
 }
 
-.main-sign-box {
-  width: 100%;
-  height: 100%;
-  padding: 4px;
+.sign-box-left {
+  width: 116.25px;
+  height: 52.5px;
+  border-radius: 6px;
+  background: #EBF8FF;
+  margin: 4px 50px 4px -6px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  color: #106DB6;
+  font-size: 9px;
+  font-weight: 600;
+}
+
+.sign-box-right {
+  width: 52.5px;
+  height: 52.5px;
+  background: linear-gradient(0deg, rgba(16, 109, 182, 0.9), rgba(16, 109, 182, 0.9)),
+    linear-gradient(0deg, #EBF8FF, #EBF8FF);
+  border: 1px solid #EBF8FF;
+  border-radius: 8px;
+  margin: 4px 4px 4px 123px;
+  overflow: visible;
+  position: absolute;
+}
+
+.sign-box-icon {
+  width: 14.5px;
+  height: 14.5px;
+  z-index: 1;
+  // background: #ffffff;
+  vertical-align: middle;
+  margin-top: 18px;
+}
+
+.swap-stamp-btn {
+  position: absolute;
+  top: -21px;
+  right: 15px;
+}
+
+.sign-swap-icon {
+  width: 19px;
+  cursor: pointer;
+}
+
+.long-text-select {
+  width: 200px; /* Adjust the width as needed */
+}
+
+.long-text-select option {
+  white-space: normal; /* Allow text to wrap */
+  overflow: hidden; /* Hide overflow if wrapping occurs */
+}
+
+
+
+// test select option
+.custom-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.selected-option {
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+}
+
+.options-list {
+  display: none;
+  position: absolute;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+  background-color: white;
+  max-height: 200px; /* Set a max height for the options list */
+  overflow-y: auto;
+}
+
+.options-list li {
+  padding: 5px;
+  white-space: nowrap;
+}
+
+.options-list li:hover {
+  background-color: #f0f0f0;
+}
+
+.form-control {
+  height: 48px;
+  background-color: #F7FAFD;
+  border: 1px solid #E6EDFA;
+}
+
+.input-position-size {
+  display: block;
+  background-color: #F7FAFD;
+  border: 1px solid #E6EDFA;
+  border-radius: 6px;
+  height: 48px;
+  width: 100% !important;
+  padding: 10px;
 }
